# getbot

./: .gitignore  .gitmodules  README.md  all.groups  variables.groups
src/battery_pub/src/: battery_pub.cpp
src/controller/: CMakeLists.txt
src/controller/launch/: controller_launch.py
src/controller/src/: action_controller.cpp  approach_balls_action_node.cpp  controller_node.cpp
src/multi_robot/: CMakeLists.txt  package.xml
src/multi_robot/behavior_trees_xml/: drop.xml  grab.xml  grab_robot1.xml  grab_robot2.xml
src/multi_robot/config/: params_multi_robot.yaml
src/multi_robot/include/multi_robot/behavior_tree_nodes/: CloseGripper.hpp  ExtendArm.hpp  LiftArm.hpp  LowerArm.hpp  OpenGripper.hpp
src/multi_robot/launch/: multi_robot_launch.py  multi_robot_launch_bt.py  test
src/multi_robot/pddl/: multi_robots.pddl
src/multi_robot/src/: approach_items_node.cpp  approach_items_target_node.cpp  drop_items_node.cpp  drop_items_node.txt  grab_items_node.cpp  grab_items_node.txt  handle_items_node.cpp  multi_robot_controller.cpp
src/multi_robot/src/behavior_tree_nodes/: CloseGripper.cpp  ExtendArm.cpp  LiftArm.cpp  LowerArm.cpp  OpenGripper.cpp
src/server/: CMakeLists.txt  package.xml
src/server/src/: position_server.cpp
